# freicoin

./: .gitattributes  .gitignore  Automate.yml  BITCORE  BITORE  COPYING  INSTALL  Makefile.am  Python.JS  README.md  Raku.i  bitcoin-qt.pro  bitore.sig  bitore.sig : E=Request :Pull Request.md : Title'' ':'Nan.yml'' :  configure.ac  mit-license.txt  pkg.m4  pom.YML  run.sh  unsigned.blink.yml
.github/workflows/: Build and Deploy.yml  Lydia.yml  bitore.sig  jekyll-docker.yml  manual.yml  python-package-conda.yml  stale.yml
.tx/: config
Bitore.sigs/: Test'@.Travis
Build and Deployee./: Read.md
Girlscoute-Camp/Gamble/: OPEN.json
My.sigs/: bitore.sig
Raki.u/: Rust.yml
bitore.sig/README.md/: README.md
ci/: CI.yml
ci :/: CI.yml
ci/C:/: ignition-remix.yml
contrib/: README.md  freicoin-qt.pro  freicoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  freicoin-qt.desktop  freicoin-qt.install  freicoin-qt.lintian-overrides  freicoin-qt.protocol  freicoind.bash-completion  freicoind.examples  freicoind.install  freicoind.lintian-overrides  freicoind.manpages  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  rebrand.sh  update-translations.py
contrib/freicoin/: demurrage_parameters_arithmetic.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  deps-win32.yml  gitian-linux.yml  gitian-osx-freicoin.yml  gitian-win.yml  gitian-win32.yml  gitian.yml  qt-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/homebrew/: bitcoin.qt.pro.patch  makefile.osx.patch
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: DS_Store  README.md  background.psd  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  example-config.cfg  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: makeseeds.py
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/vagrant/: .gitignore  Makefile  README.md  Vagrantfile  gitian-host.json
contrib/verifysfbinaries/: verify.sh
contrib/wallettools/: walletchangepass.py  walletunlock.py
doc/: Doxyfile  README.md  README_windows.txt  Tor.txt  bootstrap.md  build-msw.md  build-osx.md  build-unix.md  coding.md  gitian-building.md  multiwallet-qt.md  readme-qt.rst  release-notes.md  release-process.md  systemd.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.7.1.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-freicoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi  setup.nsi.in  ui.rc
share/certs/: BitcoinFoundation_Apple_Cert.pem  BitcoinFoundation_Comodo_Cert.pem  PrivateKeyNotes.md
share/pixmaps/: freicoin128.xpm  freicoin16.xpm  freicoin256.xpm  (+2 more)
src/: Makefile.am  Makefile.include  addrman.h  alert.h  allocators.h  amount.cpp  amount.h  base58.cpp  base58.h  bignum.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoind-res.rc  bitcoind.cpp  bitcoinrpc.cpp  bitcoinrpc.h  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  clientversion.h  coins.cpp  coins.h  compat.h  compressor.cpp  core.cpp  core.h  db.h  freicoin-cli-res.rc  freicoin-cli.cpp  freicoind-res.rc  freicoind.cpp  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.h  leveldbwrapper.h  (+51 more)
src/compat/: glibc_compat.cpp
src/consensus/: params.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: freicoin_find_bdb48.m4  freicoin_qt.m4  freicoin_subdir_to_include.m4
src/primitives/: transaction.cpp  transaction.h
src/qt/: Makefile.am  aboutdialog.cpp  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  editaddressdialog.cpp  freicoin.cpp  freicoin.qrc  freicoinaddressvalidator.cpp  freicoinaddressvalidator.h  freicoinamountfield.cpp  freicoinamountfield.h  freicoingui.cpp  freicoingui.h  freicoinstrings.cpp  freicoinunits.cpp  freicoinunits.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  (+40 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_gu_IN.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_ko_KR.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_lv_LV.ts  bitcoin_mn.ts  (+89 more)
src/qt/res/: bitcoin-qt-res.rc  bitcoin-qt.rc  freicoin-qt-res.rc
src/qt/res/icons/: freicoin.icns
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  README.md  base58_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  netbase_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_P2SH_tests.cpp  test_freicoin.cpp  transaction_tests.cpp  util_tests.cpp  wallet_tests.cpp
src/test/data/: README.md
write-prettier.config-setup/: A.P.I  ruby.yml
(+130 files in other folders)
